# chidian

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  setup.py
chidian/: __init__.py  context.py  core.py  data_mapping.py  decorator.py  dict_group.py  drop.py  dsl_parser.py  keep.py  mapper.py  parser.py  partials.py  process.py  seeds.py  table.py
chidian-core/: Cargo.toml
chidian-py/: .gitignore  Cargo.toml  debug_test.py  pyproject.toml
chidian-py/chidian/: __init__.py  collection.py  data_mapping.py  dict_group.py  dict_utils.py  dicts.py  group.py  lens.py  lexicon.py  lib.py  mapper.py  partials.py  piper.py  recordset.py  seeds.py  typed_piper.py  view.py
chidian-py/chidian/dicts/: __init__.py  mapper.py
chidian-py/chidian/tests/: conftest.py  test_dicts.py  test_mapper.py  test_partials.py
chidian-py/chidian_py_rs/: __init__.py  chidian_py_rs.pyi
chidian-py/chidian_rs/: __init__.py  chidian_rs.pyi
chidian-py/src/: lib.rs  parser.rs  py_mutation.rs  py_traversal.rs  traversal.rs
chidian-py/src-py/chidian/: __init__.py  context.py  dicts.py  mapper.py  partials.py  types.py
chidian-py/tests/: A.json  B.json  __init__.py  classes.py  conftest.py  helpers.py  structstest.py  test_collection.py  test_data_mapping.py  test_data_mapping_bidirectional.py  test_data_mapping_unidirectional.py  test_dict_group.py  test_dict_utils.py  test_dicts.py  test_get.py  test_integration.py  test_lens.py  test_lexicon.py  test_lib.py  test_lib_get.py  test_mapper.py  test_mapper_string.py  test_mapper_struct.py  test_partials.py  test_piper.py  test_piper_typed.py  test_property_based.py  test_put.py  test_readme.py  test_recordset.py  test_seeds.py  test_seeds_basic.py  test_seeds_original_backup.py  test_seeds_transform.py  test_typed_piper.py  test_view.py
tests/: B.json  test_a_b_example.py  (+11 more)
(+33 files in other folders)
