[workspace]
members = [
    "chidian-core",
    "chidian-py"
]
resolver = "2"

# Workspace-level settings
[workspace.dependencies]
nom = "7.1"
pyo3 = { version = "0.24", features = ["extension-module"] }
rustc-hash = "1.1"

# Optional: shared workspace metadata
[workspace.package]
version = "0.1.0"
edition = "2024"
