[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chidian"
version = "0.2.1"
requires-python = ">=3.10"
dependencies = [
    "parsimonious>=0.10.0",
    "pydantic>=2.10.6,<3.0.0", # Only Pydantic v2 is supported
]

[tool.setuptools.package-data]
# relative to the chidian/lib/ package directory
"chidian.lib" = ["dsl/*.peg"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "hypothesis>=6.0.0",
    "ruff>=0.11.12",
    "mypy>=1.14.1",
]
