[package]
name = "chidian"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chidian_py_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
chidian-core = { path = "../chidian-core" }
