[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "chidian"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.10.6",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "hypothesis>=6.0.0",
]
